--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ coreTestVersion = "1.7.0"
 mockk = "1.14.7"
 turbine = "1.2.1"
 assertK = "0.28.1"
+paging3 = "3.3.6"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -46,6 +47,7 @@ ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
 androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "nav3Core" }
 androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "nav3Core" }
 androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "lifecycleViewmodelNav3" }
@@ -56,6 +58,8 @@ androidx-test-core-ktx = { group = "androidx.test", name = "core-ktx", version.r
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 assertK = { module = "com.willowtreeapps.assertk:assertk", version.ref = "assertK" }
+androidx-paging3-runtime = { module = "androidx.paging:paging-runtime-ktx", version.ref = "paging3" }
+androidx-paging3-compose = { module = "androidx.paging:paging-compose", version.ref = "paging3" }
 
 
 [plugins]
